--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,26 @@
 
 # Server
 PORT=8080
-ENVIRONMENT=development
+HOST=0.0.0.0
+ENVIRONMENT=development          # development | production
 
-# PostgreSQL
+# Timeouts
+READ_TIMEOUT=5s
+WRITE_TIMEOUT=10s
+IDLE_TIMEOUT=120s
+
+# PostgreSQL (used by Docker Compose)
 POSTGRES_USER=pulsescore
 POSTGRES_PASSWORD=pulsescore
 POSTGRES_DB=pulsescore_dev
+
+# Database connection (used by the Go API)
 DATABASE_URL=postgres://pulsescore:pulsescore@localhost:5432/pulsescore_dev?sslmode=disable
+DB_MAX_OPEN_CONNS=25
+DB_MAX_IDLE_CONNS=5
+
+# CORS — comma-separated list of allowed origins
+CORS_ALLOWED_ORIGINS=http://localhost:5173
+
+# Rate limiting — requests per minute per IP
+RATE_LIMIT_RPM=100
