--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
         container_name: pulsescore-postgres
         restart: unless-stopped
         ports:
-            - '5432:5432'
+            - '${DB_PORT:-5434}:5432'
         environment:
             POSTGRES_USER: ${POSTGRES_USER:-pulsescore}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-pulsescore}
