feat: implement HubSpot CRM integration
- Add HubSpot OAuth 2.0 flow (connect, callback, token refresh, disconnect)
- Add HubSpot API client with rate limiting (10 req/s)
- Add sync services for contacts, deals, and companies
- Add customer merge/dedup service with field priority rules
- Add webhook handler with HMAC-SHA256 v3 signature verification
- Add sync orchestrator with full and incremental sync pipelines
- Add HubSpot repositories (contacts, deals, companies)
- Add migration 000014 for hubspot_contacts, hubspot_deals, hubspot_companies
- Add frontend HubSpotConnectionCard, callback page, and API client
- Update IntegrationsTab and SettingsPage with HubSpot support
- Update sync scheduler and connection monitor for HubSpot
- Update OpenAPI spec with 6 HubSpot endpoints and schemas
- Extend customer repo (GetByEmail, FindDuplicatesByEmail)
- Extend integration_connection repo (GetByProviderAndExternalID)

Closes #123, closes #124, closes #125, closes #126, closes #127, closes #128, closes #129, closes #130

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,11 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 # Rate limiting — requests per minute per IP
 RATE_LIMIT_RPM=100
+
+# HubSpot Integration
+HUBSPOT_CLIENT_ID=
+HUBSPOT_CLIENT_SECRET=
+HUBSPOT_OAUTH_REDIRECT_URL=http://localhost:8080/api/v1/integrations/hubspot/callback
+HUBSPOT_ENCRYPTION_KEY=
+HUBSPOT_WEBHOOK_SECRET=
+HUBSPOT_SYNC_INTERVAL_MIN=15
