--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,25 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173
 # Rate limiting — requests per minute per IP
 RATE_LIMIT_RPM=100
 
+# Stripe Integration (data sync OAuth/webhooks)
+STRIPE_CLIENT_ID=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_OAUTH_REDIRECT_URL=http://localhost:8080/api/v1/integrations/stripe/callback
+STRIPE_ENCRYPTION_KEY=
+STRIPE_SYNC_INTERVAL_MIN=15
+STRIPE_PAYMENT_SYNC_DAYS=90
+
+# Stripe Billing (PulseScore subscriptions)
+STRIPE_BILLING_SECRET_KEY=
+STRIPE_BILLING_PUBLISHABLE_KEY=
+STRIPE_BILLING_WEBHOOK_SECRET=
+STRIPE_BILLING_PORTAL_RETURN_URL=http://localhost:5173/settings/billing
+STRIPE_BILLING_PRICE_GROWTH_MONTHLY=
+STRIPE_BILLING_PRICE_GROWTH_ANNUAL=
+STRIPE_BILLING_PRICE_SCALE_MONTHLY=
+STRIPE_BILLING_PRICE_SCALE_ANNUAL=
+
 # HubSpot Integration
 HUBSPOT_CLIENT_ID=
 HUBSPOT_CLIENT_SECRET=
