--- a/.env.production.example
+++ b/.env.production.example
@@ -16,3 +16,13 @@ CORS_ALLOWED_ORIGINS=https://yourdomain.com
 
 # Rate limiting — requests per minute per IP
 RATE_LIMIT_RPM=100
+
+# Stripe Billing (PulseScore subscriptions)
+STRIPE_BILLING_SECRET_KEY=
+STRIPE_BILLING_PUBLISHABLE_KEY=
+STRIPE_BILLING_WEBHOOK_SECRET=
+STRIPE_BILLING_PORTAL_RETURN_URL=https://yourdomain.com/settings/billing
+STRIPE_BILLING_PRICE_GROWTH_MONTHLY=
+STRIPE_BILLING_PRICE_GROWTH_ANNUAL=
+STRIPE_BILLING_PRICE_SCALE_MONTHLY=
+STRIPE_BILLING_PRICE_SCALE_ANNUAL=
