feat(web): ship one-shot SEO hardening and prerender pipeline

--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "seo:validate": "node scripts/validate-seo-pages.mjs",
+    "seo:artifacts": "node scripts/generate-seo-artifacts.mjs",
+    "seo:prerender": "node scripts/prerender-seo-pages.mjs",
+    "build": "npm run seo:validate && npm run seo:artifacts && tsc -b && vite build && npm run seo:prerender",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\"",
