--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -4,6 +4,11 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Canonical URL normalization
+    if ($uri ~ "^(.+)/+$") {
+        return 301 $scheme://$host$1$is_args$args;
+    }
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -16,6 +21,7 @@ server {
     add_header X-Frame-Options "DENY" always;
     add_header X-XSS-Protection "0" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Cache hashed assets aggressively (1 year)
     location /assets/ {
