--- a/.env.production.example
+++ b/.env.production.example
@@ -12,7 +12,7 @@ POSTGRES_DB=pulsescore
 PORT=8080
 
 # CORS — comma-separated list of allowed origins
-CORS_ALLOWED_ORIGINS=https://yourdomain.com
+CORS_ALLOWED_ORIGINS=https://galdr.subcult.tv
 
 # Rate limiting — requests per minute per IP
 RATE_LIMIT_RPM=100
@@ -21,7 +21,7 @@ RATE_LIMIT_RPM=100
 STRIPE_BILLING_SECRET_KEY=
 STRIPE_BILLING_PUBLISHABLE_KEY=
 STRIPE_BILLING_WEBHOOK_SECRET=
-STRIPE_BILLING_PORTAL_RETURN_URL=https://yourdomain.com/settings/billing
+STRIPE_BILLING_PORTAL_RETURN_URL=https://galdr.subcult.tv/settings/billing
 STRIPE_BILLING_PRICE_GROWTH_MONTHLY=
 STRIPE_BILLING_PRICE_GROWTH_ANNUAL=
 STRIPE_BILLING_PRICE_SCALE_MONTHLY=
