fix(web): scope prerender CSS and finalize prod deploy updates

--- a/.env.production.example
+++ b/.env.production.example
@@ -11,6 +11,11 @@ POSTGRES_DB=pulsescore
 # Server
 PORT=8080
 
+# Auth (required in production)
+JWT_SECRET=CHANGEME_use_a_long_random_secret
+JWT_ACCESS_TTL=15m
+JWT_REFRESH_TTL=168h
+
 # CORS — comma-separated list of allowed origins
 CORS_ALLOWED_ORIGINS=https://galdr.subcult.tv
 
