--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,69 +1,69 @@
 name: Deploy Production
 
 on:
-  workflow_dispatch:
-    inputs:
-      ref:
-        description: Git ref to deploy (branch, tag, or commit SHA)
-        required: true
-        default: main
-      run_migrations:
-        description: Request migrations during deploy (currently a no-op)
-        required: true
-        type: choice
-        default: "false"
-        options:
-          - "false"
-          - "true"
+    workflow_dispatch:
+        inputs:
+            ref:
+                description: Git ref to deploy (branch, tag, or commit SHA)
+                required: true
+                default: main
+            run_migrations:
+                description: Request migrations during deploy (currently a no-op)
+                required: true
+                type: choice
+                default: 'false'
+                options:
+                    - 'false'
+                    - 'true'
 
 concurrency:
-  group: production-deploy
-  cancel-in-progress: false
+    group: production-deploy
+    cancel-in-progress: false
 
 jobs:
-  deploy:
-    name: Deploy to VPS
-    runs-on: ubuntu-latest
-    environment: production
-    steps:
-      - name: Validate required secrets
-        env:
-          VPS_HOST: ${{ secrets.VPS_HOST }}
-          VPS_USER: ${{ secrets.VPS_USER }}
-          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
-          VPS_APP_DIR: ${{ secrets.VPS_APP_DIR }}
-        run: |
-          set -euo pipefail
-          for key in VPS_HOST VPS_USER VPS_SSH_KEY VPS_APP_DIR; do
-            if [ -z "${!key}" ]; then
-              echo "::error::Missing required repository secret: $key"
-              exit 1
-            fi
-          done
+    deploy:
+        name: Deploy to VPS
+        runs-on: ubuntu-latest
+        environment: production
+        steps:
+            - name: Validate required secrets
+              env:
+                  VPS_HOST: ${{ secrets.VPS_HOST }}
+                  VPS_USER: ${{ secrets.VPS_USER }}
+                  VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
+                  VPS_APP_DIR: ${{ secrets.VPS_APP_DIR }}
+              run: |
+                  set -euo pipefail
+                  for key in VPS_HOST VPS_USER VPS_SSH_KEY VPS_APP_DIR; do
+                    if [ -z "${!key}" ]; then
+                      echo "::error::Missing required repository secret: $key"
+                      exit 1
+                    fi
+                  done
 
-      - name: Deploy over SSH
-        uses: appleboy/ssh-action@v1.2.2
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_PORT != '' && secrets.VPS_PORT || 22 }}
-          script_stop: true
-          command_timeout: 45m
-          script: |
-            set -eu
+            - name: Deploy over SSH
+              uses: appleboy/ssh-action@v1.2.2
+              with:
+                  host: ${{ secrets.VPS_HOST }}
+                  username: ${{ secrets.VPS_USER }}
+                  key: ${{ secrets.VPS_SSH_KEY }}
+                  port: ${{ secrets.VPS_PORT != '' && secrets.VPS_PORT || 22 }}
+                  script_stop: true
+                  command_timeout: 45m
+                  script: |
+                      set -eu
 
-            cd "${{ secrets.VPS_APP_DIR }}"
+                      cd "${{ secrets.VPS_APP_DIR }}"
 
-            git fetch --prune origin
+                      git fetch --prune origin
 
-            TARGET_REF="${{ inputs.ref }}"
-            if git show-ref --verify --quiet "refs/remotes/origin/${TARGET_REF}"; then
-              git checkout "$TARGET_REF"
-              git reset --hard "origin/${TARGET_REF}"
-            else
-              git checkout "$TARGET_REF"
-            fi
+                      TARGET_REF="${{ inputs.ref }}"
+                      if git show-ref --verify --quiet "refs/remotes/origin/${TARGET_REF}"; then
+                        git checkout "$TARGET_REF"
+                        git reset --hard "origin/${TARGET_REF}"
+                      else
+                        git checkout "$TARGET_REF"
+                      fi
 
-            chmod +x ./scripts/deploy/vps-deploy.sh
-            RUN_MIGRATIONS="${{ inputs.run_migrations }}" ./scripts/deploy/vps-deploy.sh
+                      chmod +x ./scripts/deploy/vps-deploy.sh
+                      RUN_MIGRATIONS="${{ inputs.run_migrations }}" ./scripts/deploy/vps-deploy.sh
